--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -7,7 +7,10 @@
   <link rel='stylesheet' href="/static/bundle.css" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="shortcut icon" href="/favicon.ico">
+
 </head>
 
 <body>
