login signup validation

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
 @import './stylesheets/header.css';
 @import './stylesheets/reset.css';
 @import './stylesheets/style.css';
+@import './stylesheets/loginSignup.scss';
