--- a/client/src/stylesheets/style.css
+++ b/client/src/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-	margin: 20px 40px;
+	margin: 20px auto;
   /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
