add footer component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,4 @@
 @import './stylesheets/reset.css';
 @import './stylesheets/style.css';
 @import './stylesheets/loginSignup.scss';
+@import './stylesheets/footer.css';
