--- a/client/src/stylesheets/footer.css
+++ b/client/src/stylesheets/footer.css
@@ -1,4 +1,16 @@
 .footer ul {
-	display: flex;
+	position: absolute;
+	padding: 20px;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
 	justify-content: space-between;
+}
+
+.footer ul li {
+	transition: all 300ms ease-in-out;
+}
+
+.footer ul li:hover {
+	transform: translateX(-20px);
 }
