--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -8,7 +8,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
   <link rel="shortcut icon" href="/dka.ico">
 </head>
 
