add registration form

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,5 @@
 @import './stylesheets/style.css';
 @import './stylesheets/loginSignup.scss';
 @import './stylesheets/footer.css';
+@import './stylesheets/picture.css';
+@import './stylesheets/register.css';
