--- a/client/src/stylesheets/header.css
+++ b/client/src/stylesheets/header.css
@@ -1,6 +1,7 @@
 .navbar {
 	padding-left: 20px;
-	padding-right: 20px; 
+	padding-right: 20px;
+	/*box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.3);*/
 }
 
 .button {
