--- a/client/src/stylesheets/style.css
+++ b/client/src/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-	margin: 20px auto;
+	/*margin: 20px auto;*/
   /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -10,4 +10,10 @@ body {
 
 a {
   color: #00B7FF;
+}
+
+@media all and (width:400px){
+	:root {
+		font-size: 8px;
+	}
 }
