add contact component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,4 @@
 @import './stylesheets/footer.css';
 @import './stylesheets/picture.css';
 @import './stylesheets/register.css';
+/*@import './stylesheets/contact.scss';*/
