add nodemailer for account verification

--- a/client/src/stylesheets/contact.scss
+++ b/client/src/stylesheets/contact.scss
@@ -1,11 +1,11 @@
-.contact-sec-hdr {
-	ul li a {
-		color: tomato;
-	}
-	ul li a:hover {
-		color: white;
-	}
-}
+// .contact-sec-hdr {
+// 	ul li a {
+// 		color: tomato;
+// 	}
+// 	ul li a:hover {
+// 		color: white;
+// 	}
+// }
 
 .form-sec {
 	background: #111;
