add hamburger menu

--- a/client/src/stylesheets/header.css
+++ b/client/src/stylesheets/header.css
@@ -11,3 +11,22 @@
 .logo {
 	/*border-radius: 50%;*/
 }
+
+.hamburgerMenu {
+	transition: all 300ms ease-in-out;
+}
+
+.show {
+	display: block;
+	position: absolute;
+	top: 50%;
+	left:100%;
+	transform: translateX(-50%);
+	width: 12rem;
+	background-color: #111;
+	padding: 1.4rem 2rem;
+}
+
+.hide {
+	display: none;
+}
