--- a/client/src/stylesheets/picture.css
+++ b/client/src/stylesheets/picture.css
@@ -1,10 +1,16 @@
 .hero-image {
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-	object-position: 50% -50% !important;
+	/*height: auto;*/
+	/*width: 100%;*/
+	/*object-fit: cover;*/
+	/*object-position: 50% -50% !important;*/
 }
 
 .carousel-inner {
-	/*height: 25rem;*/
+	/*height: 35rem;*/
+}
+
+.carousel-item img {
+	height: 35rem;
+	/*object-fit: cover;*/
+	/*object-position: 50% -50%;*/
 }
