--- a/client/src/stylesheets/header.css
+++ b/client/src/stylesheets/header.css
@@ -1,7 +1,7 @@
 .navbar {
 	padding-left: 20px;
 	padding-right: 20px;
-	box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.3);
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .button {
@@ -16,7 +16,10 @@
 	transition: all 300ms ease-in-out;
 }
 
-.show {
+
+/*hamburger toogle css*/
+
+/*.show {
 	display: block;
 	position: absolute;
 	top: 50%;
@@ -29,4 +32,4 @@
 
 .hide {
 	display: none;
-}
+}*/
