--- a/client/src/stylesheets/picture.css
+++ b/client/src/stylesheets/picture.css
@@ -14,3 +14,10 @@
 	/*object-fit: cover;*/
 	/*object-position: 50% -50%;*/
 }
+.card {
+	transition: all 200ms ease-out;
+}
+
+.card:hover {
+	box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25)!important;
+}
