--- a/client/src/stylesheets/header.css
+++ b/client/src/stylesheets/header.css
@@ -4,6 +4,27 @@
 	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
+.navbar {
+	display: flex;
+	justify-content: space-between;
+}
+
+.carousel-inner {
+	display: flex;
+	/*justify-content: space-around;*/
+}
+
+.carousel-item {
+	overflow: hidden;
+	width: 100vw;
+}
+
+.carousel-item img {
+	/*width: 100%;*/
+	/*height: auto;*/
+	object-fit: cover;
+}
+
 .button {
 	margin: 0 10px;
 }
