--- a/client/src/stylesheets/loginSignup.scss
+++ b/client/src/stylesheets/loginSignup.scss
@@ -1,6 +1,6 @@
 h2 {
-  color: #6D7781;
-  font-family: "Sofia", cursive;
+  color: #6d7781;
+  font-family: 'Sofia', cursive;
   font-size: 15px;
   font-weight: bold;
   font-size: 3.6em;
@@ -23,17 +23,18 @@ a {
   margin-left: -175px;
 }
 
-input[type="text"], input[type="password"] {
+input[type='text'],
+input[type='password'] {
   width: 300px;
   padding: 20px 0px;
   background: transparent;
   border: 0;
   border-bottom: 1px solid #435160;
   outline: none;
-  color: #6D7781;
+  color: #6d7781;
   font-size: 16px;
 }
-input[type=checkbox] {
+input[type='checkbox'] {
   display: none;
 }
 
@@ -45,18 +46,18 @@ label {
   height: 8px;
   border-radius: 50%;
   background: black;
-  content: "";
+  content: '';
   transition: all 0.3s ease-in-out;
   cursor: pointer;
   border: 3px solid #435160;
 }
 
-#agree:checked ~ label[for=agree] {
+#agree:checked ~ label[for='agree'] {
   background: red;
 }
 
-input[type="submit"] {
-  background: #1FCE6D;
+input[type='submit'] {
+  background: #1fce6d;
   border: 0;
   width: 300px;
   height: 40px;
@@ -66,7 +67,7 @@ input[type="submit"] {
   cursor: pointer;
   transition: background 0.3s ease-in-out;
 }
-input[type="submit"]:hover {
+input[type='submit']:hover {
   background: #16aa56;
   animation-name: shake;
 }
@@ -84,7 +85,7 @@ input[type="submit"]:hover {
   font-size: 11px;
   text-align: center;
   font-weight: bold;
-  color: #6D7781;
+  color: #6d7781;
 }
 
 .agree {
@@ -105,13 +106,21 @@ input[type="submit"]:hover {
 }
 
 @keyframes shake {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateX(0);
   }
-  10%, 30%, 50%, 70%, 90% {
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
     transform: translateX(-10px);
   }
-  20%, 40%, 60%, 80% {
+  20%,
+  40%,
+  60%,
+  80% {
     transform: translateX(10px);
   }
 }
@@ -132,11 +141,11 @@ input[type="submit"]:hover {
 }
 
 .hdr-btn {
-  margin : 0 5px;
+  margin: 0 5px;
 }
 
-.register-error {
-  padding-top: 20px;
+.error {
+  padding: 10px;
   color: red;
   text-align: center;
 }
